--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <title>Document</title>
 </head>
 <body>
-    Hey there
+    <div id = 'hitbox'>
+        Hey there. Please put your mouse on this page and watch the chaos unfold.
+    </div>
+    
+
+    <!--audio-->
+    <audio id = 'myAudio' src="erro.mp3" type="audio/mpeg"></audio>
+    <audio id = 'myAudio2' src="preview_4.mp3" type="audio/mpeg"></audio>
+    <source src="mlp.mp3" type="audio/mpeg">
 </body>
 <script src = 'js/app.js'></script>
 </html>
