fixed a small bug

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id = 'hitbox'>
-        Hey there. Please put your mouse on this page and watch the chaos unfold.
+        Hey there. Please put your mouse on this page and watch the chaos unfold. Full screen is <b><u>highly </u></b> recommended!
     </div>
     
 
